[package]
name = "hotshot-state-prover"
description = "Generate state update proof for HotShot light client"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-ff/std"]
parallel = ["jf-signature/parallel", "jf-utils/parallel", "ark-ff/parallel"]

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-srs = { workspace = true }
ark-std = { workspace = true }
clap = { workspace = true }
displaydoc = { workspace = true }
espresso-contract-deployer = { workspace = true }
espresso-types = { workspace = true }
futures = { workspace = true }
hotshot-contract-adapter = { workspace = true }
hotshot-query-service = { workspace = true }
hotshot-task-impls = { workspace = true }
hotshot-types = { workspace = true }
itertools = { workspace = true }
jf-crhf = { workspace = true }
jf-pcs = { workspace = true }
jf-plonk = { workspace = true }
# Dependencies below are for LCV1 backward compatibility
jf-plonk-compat = { workspace = true }
jf-relation = { workspace = true }
jf-relation-compat = { workspace = true }
jf-rescue = { workspace = true }
jf-rescue-compat = { workspace = true }
jf-signature = { workspace = true }
jf-signature-compat = { workspace = true }
jf-utils = { workspace = true }
reqwest = { workspace = true }
sequencer-utils = { workspace = true }
serde = { workspace = true }
surf-disco = { workspace = true }
tide-disco = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
sequencer-utils = { workspace = true, features = ["testing"] }
test-log = { workspace = true }

[lints]
workspace = true

