[package]
name = "light-client-query-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
default-run = "light-client-query-service"

[[bin]]
name = "light-client-genesis"
path = "src/bin/genesis.rs"
required-features = ["genesis"]

[features]
default = ["genesis"]
genesis = ["hotshot-types", "surf-disco"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
espresso-node = { workspace = true, default-features = false }
espresso-types = { workspace = true, features = ["node"] }
hotshot-query-service = { workspace = true }

# Optional dependencies for genesis utility.
hotshot-types = { workspace = true, optional = true }
light-client = { workspace = true, features = ["client", "rlp"] }
log-panics = { workspace = true }
semver = { workspace = true }
surf-disco = { workspace = true, optional = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vbs = { workspace = true }

[lints]
workspace = true
