[package]
name = "light-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
# Host-side query client, sqlite storage and query-service provider; disable
# for constrained targets (e.g. SP1 zkVM).
client = [
    "dep:hotshot-query-service",
    "dep:serde_json",
    "dep:sqlx",
    "dep:surf-disco",
    "dep:tempfile",
    "dep:tokio",
    "espresso-types/node",
    "hotshot-query-service-types/sqlx",
    "hotshot-query-service-types/web",
]
rlp = ["alloy-rlp", "espresso-types/rlp", "hotshot-types/rlp"]
testing = [
    "bitvec",
    "client",
    "espresso-types/testing",
    "hotshot-contract-adapter",
    "rand",
]

[dependencies]
# Direct declaration: default-features = false is ignored on workspace-inherited deps.
alloy = { version = "1.0", default-features = false }
anyhow = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, optional = true }
committable = { workspace = true }
derivative = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true }
espresso-types = { workspace = true }
futures = { workspace = true }
hotshot-query-service = { workspace = true, features = [
    "sqlite-options",
], optional = true }
hotshot-query-service-types = { workspace = true }
hotshot-types = { workspace = true }
jf-advz = { workspace = true }
jf-merkle-tree-compat = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
static_assertions = { workspace = true }
surf-disco = { workspace = true, optional = true }
tagged-base64 = { workspace = true }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
vbs = { workspace = true }
versions = { workspace = true }

# RLP dependencies
alloy-rlp = { workspace = true, optional = true }

# Testing dependencies
bitvec = { workspace = true, optional = true }
hotshot-contract-adapter = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
espresso-node = { workspace = true, default-features = false, features = [
    "testing",
] }
itertools = { workspace = true }
light-client = { path = ".", features = ["rlp", "testing"] }
pretty_assertions = { workspace = true }
test-log = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
