[package]
name = "request-response"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
byteorder = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
hotshot-types = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde = { workspace = true }

[lints]
workspace = true
