# As a workaround for feature unification by cargo this separate crate
# that is **not** a default member of the workspace.
[package]
name = "sequencer-sqlite"
version = "0.1.0"
edition = "2021"

# NOTE: when making changes here also update sequencer-sqlite/Cargo.toml.
[profile.dev]
# This profile should allow connecting debuggers. Compiles more slowly and
# requires significantly more memory to compile.
strip = "none"
debug = "full"

[features]
fee = ["sequencer/fee"]
pos = ["sequencer/pos"]
drb-and-header = ["sequencer/drb-and-header"]
default = ["fee", "pos", "drb-and-header"]

[dependencies]
anyhow = { workspace = true }
# disable default features to allow including versions on demand
sequencer = { path = "../sequencer", default-features = false, features = ["embedded-db"] }
tokio = { workspace = true }
