# As a workaround for feature unification by cargo this separate crate
# that is **not** a default member of the workspace.
[package]
name = "sequencer-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
# disable default features to allow including versions on demand
sequencer = { workspace = true, default-features = false, features = ["embedded-db"] }
tokio = { workspace = true }
