[package]
name = "staking-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "A CLI to interact with the Espresso stake table contract"

[features]
testing = ["warp", "test-utils"]

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-serialize = { workspace = true }
clap = { workspace = true }
clap-serde = { workspace = true }
clap-serde-derive = { workspace = true }
derive_more = { workspace = true }
directories = { workspace = true }
dotenvy = { workspace = true }
espresso-contract-deployer = { workspace = true }
espresso-safe-tx-builder = { workspace = true }
espresso-types = { workspace = true }
futures-util = { workspace = true }

hotshot-contract-adapter = { workspace = true }
hotshot-state-prover = { workspace = true }
hotshot-types = { workspace = true }
jf-merkle-tree-compat = { workspace = true }
jf-signature = { workspace = true }
prometheus-parse = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
rust_decimal = { workspace = true }
espresso-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tagged-base64 = { workspace = true }
test-utils = { path = "../test-utils", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
warp = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
staking-cli = { path = ".", features = ["testing"] }
tempfile = { workspace = true }
test-log = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
