[package]
authors = { workspace = true }
name = "stats"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
csv = "1"
espresso-types = { path = "../types" }
hotshot-task-impls = { workspace = true }
hotshot-types = { workspace = true }
plotly = "0.13.5"
serde = { workspace = true }
