[package]
name = "tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
hotshot-query-service = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
client = { workspace = true }
dotenvy = { workspace = true }
espresso-contract-deployer = { workspace = true }
espresso-types = { workspace = true, features = ["testing"] }
futures = { workspace = true }
hotshot-contract-adapter = { workspace = true }
hotshot-state-prover = { workspace = true }
hotshot-types = { workspace = true }
jf-signature = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
espresso-node = { workspace = true, default-features = false, features = ["testing"] }
espresso-utils = { workspace = true }
staking-cli = { workspace = true }
surf-disco = { workspace = true }
tagged-base64 = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
test-utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }
versions = { workspace = true }

[[test]]
name = "integration"
path = "main.rs"

[lints]
workspace = true
