[package]
name = "sequencer-utils"
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition.workspace = true

[features]
testing = []

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
ark-serialize = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
committable = { workspace = true }
hotshot = { workspace = true }
hotshot-example-types = { workspace = true }
log-panics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surf = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }
vergen-gitcl = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }

[lints]
workspace = true
