[package]
name = "vid"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = "MIT"

[features]
default = ["parallel", "keccak256"]
parallel = ["ark-ff/parallel", "jf-utils/parallel", "p3-maybe-rayon/parallel"]
print-trace = ["ark-std/print-trace"]
sha256 = []
keccak256 = []

[dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true, features = [ "asm" ] }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
base64-bytes = { workspace = true }
displaydoc = "0.2"
jf-crhf = { workspace = true }
jf-merkle-tree = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-merkle-tree-v0.4.0" }
jf-poseidon2 = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-poseidon2-v0.2.0", features = ["bn254"] }
jf-utils = { workspace = true }
p3-maybe-rayon = "0.2"
reed-solomon-simd = "3.1.0"
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = { version = "0.10" }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }
criterion = "0.5"
rand = { workspace = true }

[[bench]]
name = "avidm"
harness = false

[[bench]]
name = "avidm_gf2"
harness = false

[lints]
workspace = true
