[package]
name = "vid"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = "MIT"

[features]
default = ["parallel", "keccak256"]
parallel = ["ark-ff/parallel", "jf-utils/parallel", "p3-maybe-rayon/parallel"]
print-trace = ["ark-std/print-trace"]
sha256 = []
keccak256 = []

[dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
base64-bytes = { workspace = true }
blake3 = { workspace = true, features = ["traits-preview"] }
displaydoc = { workspace = true }
jf-crhf = { workspace = true }
jf-merkle-tree = { workspace = true }
jf-poseidon2 = { workspace = true }
jf-utils = { workspace = true }
p3-maybe-rayon = { workspace = true }
reed-solomon-simd = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "avidm"
harness = false

[[bench]]
name = "avidm_gf2"
harness = false

[[bench]]
name = "avidm_gf2_ns"
harness = false

[[bench]]
name = "avidm_gf2_breakdown"
harness = false

[lints]
workspace = true
