[package]
name = "builder"
description = "A standalone builder service"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-lock = { workspace = true }
clap = { workspace = true }
espresso-types = { workspace = true }
hotshot-builder-refactored = { workspace = true }
hotshot-builder-shared = { workspace = true }
hotshot-types = { workspace = true }
sequencer = { workspace = true, default-features = false }
sequencer-utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }

[dev-dependencies]
alloy = { workspace = true }
espresso-types = { workspace = true, features = ["testing"] }
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-types = { workspace = true }
sequencer = { workspace = true, default-features = false, features = ["testing"] }
surf-disco = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
test-utils = { workspace = true }

[lints]
workspace = true
