[package]
name        = "cliquenet-types"
version     = "0.1.0"
edition     = "2024"
description = "Cliquenet type definitions"

[features]
serde = ["dep:serde", "dep:serde_bytes"]

[dependencies]
bs58            = { workspace = true }
ed25519-compact = { workspace = true }
serde           = { workspace = true, features = ["derive"], optional = true }
serde_bytes     = { workspace = true, optional = true }
thiserror       = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
