[package]
name = "cliquenet"
version = "0.1.0"
edition.workspace = true
description = "A fully connected mesh network"

[features]
metrics = []

[dependencies]
bimap = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
hotshot-types = { workspace = true }
nohash-hasher = { workspace = true }
parking_lot = { workspace = true }
rand = "0.10.0"
scopeguard = { workspace = true }
snow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
quickcheck = { workspace = true }
test-utils = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "bench1"
harness = false
