[package]
name = "libp2p_test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "libp2p_test"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bimap = "0.6"
blake3 = "1.4"
hotshot-example-types = { workspace = true }
hotshot-libp2p-networking = { workspace = true }
hotshot-types = { workspace = true }
libp2p = { workspace = true }
libp2p-identity = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tagged-base64 = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
