[package]
name = "process-metrics"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Process-level Prometheus metrics (RSS, virtual memory, FDs, threads, uptime) and CI soak tooling."

[dependencies]
hotshot-types = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }

[lints]
workspace = true
