
[package]
name = "espresso-crypto-helper"
version = "0.1.0"
edition = "2021"

[lib]

crate-type = ["cdylib"]

[dependencies]
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
committable = { workspace = true }
espresso-types = { workspace = true }
hotshot-query-service = { workspace = true }
hotshot-types = { workspace = true }
jf-crhf = { workspace = true }
jf-merkle-tree-compat = { workspace = true }
jf-rescue = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tagged-base64 = { workspace = true }

# https://tikv.github.io/doc/openssl/index.html
# We need this for the target `aarch64-unknown-linux-gnu` in CI.
# This can be removed if we figure out this build issue.
openssl = { workspace = true }

[lints]
workspace = true
